WIP #10 - added footer content, styling

--- a/css/style.css
+++ b/css/style.css
@@ -372,6 +372,11 @@ footer {
     text-align: center;
 }
 
+footer p, footer a {
+    font-family: 'Courier Prime', monospace;
+    font-size: .75rem;
+}
+
 /* -- INDEX PAGE -- */
 
 .fullscreen-responsive {
