Finished #10 - content, links, associated css added

--- a/css/style.css
+++ b/css/style.css
@@ -810,6 +810,10 @@ main {
     margin-bottom: 1.25rem;
 }
 
+.team-card .justify {
+    text-align: justify;
+}
+
 .team-card button {
     width: 12rem;
     background-color: var(--accent);
